--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 .gradle
 /build/
+/venv/
 !gradle/wrapper/gradle-wrapper.jar
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
 
 ### IntelliJ IDEA ###
 .idea
